--- a/test/core/unitTest.html
+++ b/test/core/unitTest.html
@@ -7,7 +7,9 @@
     <script src="../../lib/js/jquery/jquery-2.0.3.min.js" charset="UTF-8"></script>
     <script src="../../core/js/m.js" charset="UTF-8"></script>
     <script src="../../core/js/m/math/gf8.js" charset="UTF-8"></script>
+    <script src="../../core/js/m/math/gf128.js" charset="UTF-8"></script>
     <script src="../../core/js/m/cipher/aes256.js" charset="UTF-8"></script>
+    <script src="../../core/js/m/cipher/mode/gcm.js" charset="UTF-8"></script>
     <script src="../../core/js/m/array.js" charset="UTF-8"></script>
     <script src="../../core/js/m/object.js" charset="UTF-8"></script>
     <script src="../../core/js/m/string.js" charset="UTF-8"></script>
