added base64 functions

--- a/test/core/unitTest.html
+++ b/test/core/unitTest.html
@@ -10,6 +10,7 @@
     <script src="../../core/js/m/math/gf128.js" charset="UTF-8"></script>
     <script src="../../core/js/m/cipher/aes256.js" charset="UTF-8"></script>
     <script src="../../core/js/m/cipher/mode/gcm.js" charset="UTF-8"></script>
+    <script src="../../core/js/m/codec/base64.js" charset="UTF-8"></script>
     <script src="../../core/js/m/array.js" charset="UTF-8"></script>
     <script src="../../core/js/m/object.js" charset="UTF-8"></script>
     <script src="../../core/js/m/string.js" charset="UTF-8"></script>
